Remove many references to /endorsed
Copy npn jar to /lib instead of modules/endorsed,

Signed-off-by: arjantijms <arjan.tijms@gmail.com>